--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,9 @@
         <meta name="description" content="Página de apoio a queixar da comunidade">
         <title>Site modelo</title>
 
-        <style>
+        <style> 
             .body{
-                background-color: #124471;
+                background-color: #0879db;
             }
             .login-button{
                 display: flex;
@@ -33,7 +33,7 @@
     <body class="body">
         <header>
             <div>
-                <img src=#>                                      <!-- logo-->
+                <img src="Comunidade_Ativa_v1.png" width="400px" height="150px">                                      <!-- logo-->
             </div>
             <div class="login-button">
                 <button type="button"><a href=#>login</button>   <!-- botao de login com link para pagina de login-->
@@ -42,7 +42,7 @@
         </header>
 
         <main class="main">
-            <button type="button"><a href=#><b><h1>Faça sua queixa</h1></b></a></button> <!-- botao para pagina d queixas-->
+            <button type="button"><a href="Teste.html"><b><h1>Faça sua queixa</h1></b></a></button> <!-- botao para pagina d queixas-->
         </main>
         <footer>
             <section class="titulos">
