--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
         <meta charset="UTF-8">
         <meta name="description" content="Página de apoio a queixar da comunidade">
         <title>Site modelo</title>
-        <link rel="stylesheet" href='/hackathon bndes/styles/main.css'>
+        <link rel="stylesheet" href='main.css'>
 
     </head>
     <body class="body">
-        <header>
+        <header class="header">
             <div>
-                <img src="Comunidade_Ativa_v1.png" width="400px" height="150px">                                      <!-- logo-->
+                <a href="Index.php">
+                <img src="Comunidade_Ativa_v1.png" width="300px" height="170px"> 
+                </a>
             </div>
-            <div class="login-button">
-                <button type="button"><a href=#>login</button>   <!-- botao de login com link para pagina de login-->
-            </div>
-            <br><br>
+
         </header>
 
         <main class="main">
-            <button type="button"><a href="Teste.html"><b><h1>Faça sua queixa</h1></b></a></button> <!-- botao para pagina d queixas-->
+            <button type="button"><a href="formulario.html"><b><h1>Faça sua queixa</h1></b></a></button> <!-- botao para pagina d queixas-->
+            <h1>What is Lorem Ipsum?</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h3>Consulta da tabela mais reclações</h3>
         </main>
         <footer>
             <section class="titulos">
