--- a/formulario.html
+++ b/formulario.html
@@ -3,14 +3,16 @@
     <head>
         <title>Formulario</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href='/hackathon bndes/styles/main.css'>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
+        <link rel="stylesheet" href='main.css'>
 
 <body class="body">
     <header class="header">
-        <a href="Index.html"><img src="/hackathon bndes/styles/Comunidade Ativa.png" height="170px" width="300px"></a>
-        <br><br>
+        <div>
+            <a href="Index.php">
+                <img src="Comunidade_Ativa_v1.png" width="300px" height="170px"> 
+            </a>                                 
+        </div>
+
     </header>
 
     <main class="main">
