--- a/Formulario.html
+++ b/Formulario.html
@@ -35,11 +35,11 @@
         <section class="campo_queixa">
                 <label for="queixa" placeholder="queixa">Queixa</label>
                     <select required name="queixa">
-                        <option value="" disabled selected>Selecione...</option>
-                        <option value="queixa1">Vazamento de esgoto</option>
-                        <option value="queixa2">Falta de água</option>
-                        <option value="queixa3">Cano estourado</option>
-                        <option value="queixa4">Outros</option>
+                        <option placeholder="" disabled selected>Selecione...</option>
+                        <option placeholder="queixa1">Vazamento de esgoto</option>
+                        <option placeholder="queixa2">Falta de água</option>
+                        <option placeholder="queixa3">Cano estourado</option>
+                        <option placeholder="queixa4">Outros</option>
                       </select><br><br>
 
                 <label for="endereço_queixa">Rua da ocorrencia</label>
